--- a/index.html
+++ b/index.html
@@ -177,14 +177,14 @@
     <div class="product-list">
         <div class="product">
             <img src="https://i.ibb.co/d092sxC/Picsart-24-10-20-12-32-24-979.png" alt="Product 1">
-            <h3>Product 1</h3>
-            <p>Price: 200 BDT</p>
+            <h3>Inferno Striker💚</h3>
+            <p>Price: 99 BDT</p>
             <button class="button buy-now" onclick="showUserIdForm(200)">Buy Now</button>
         </div>
         <div class="product">
             <img src="https://i.ibb.co/4m78c6F/Picsart-24-10-20-12-30-00-471.png" alt="Product 2">
-            <h3>Product 2</h3>
-            <p>Price: 500 BDT</p>
+            <h3>Carrom pass🩵</h3>
+            <p>Price: 157 BDT</p>
             <button class="button buy-now" onclick="showUserIdForm(500)">Buy Now</button>
         </div>
     </div>
@@ -202,7 +202,7 @@
         <div class="instructions">
             <p>• <strong>*167#</strong> ডায়াল করে NAGAD মেনুতে যান।</p>
             <p>• "Send Money" -এ ক্লিক করুন।</p>
-            <p>• প্রাপক নম্বর: <strong>01893934230</strong>
+            <p>• প্রাপক নম্বর: <strong>01581050857</strong>
                 <button class="copy-btn" onclick="copyNumber()">Copy</button>
             </p>
         </div>
@@ -214,16 +214,16 @@
     </div>
 
     <div class="footer">
-        <a href="https://www.facebook.com/xmostafizur" target="_blank">
+        <a href="https://xmostafizur.github.io/Prove-/" target="_blank">
             <button>
                 <img src="https://i.ibb.co/cCXyNwg/14255746.png" alt="Icon 1">
-                Button 1
+                Live prove
             </button>
         </a>
-        <a href="https://www.facebook.com/profile.php?id=61558001068792" target="_blank">
+        <a href="https://wa.me/+8801581050857" target="_blank">
             <button>
                 <img src="https://i.ibb.co/MNDskzJ/2936956.png" alt="Icon 2">
-                Button 2
+                Live Chat
             </button>
         </a>
     </div>
