--- a/index.html
+++ b/index.html
@@ -200,9 +200,9 @@
         <input type="text" placeholder="ট্রানজেকশন আইডি দিন" id="transactionId">
         <p id="amountText"></p>
         <div class="instructions">
-            <p>• <strong>*167#</strong> ডায়াল করে NAGAD মেনুতে যান।</p>
-            <p>• "Send Money" -এ ক্লিক করুন।</p>
-            <p>• প্রাপক নম্বর: <strong>01581050857</strong>
+            <p>• <strong>*167#</strong> ডায়াল করে বা নগদ এপস্য থেকে সেন্ডমানি করতে হবে।</p>
+            <p>• শুধু মাত্র বিকাশ এবং নগদ এ টাকা পাঠাতে পারবেন</p>
+            <p>• Nagad/Bkash: <strong>01581050857</strong>
                 <button class="copy-btn" onclick="copyNumber()">Copy</button>
             </p>
         </div>
